# vAlerain-Ark

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README-tw.MD  README-zh.MD  README.md  SECURITY.md
.github/workflows/: CMakeLists.txt  c-cpp.yml  cmake-single-platform.yml
Driver-program/: Driver-program.sys
Header-file/: DataVault.h  Hook.h
Log/: Log.txt
Preview-version/1.0.0.0/: main.cpp
Preview-version/1.0.0.1/: main.cpp
Source-code/1.0.0.0/: README.MD  main.cpp
Source-code/1.0.0.1/: README.MD  help.txt
Source-code/1.0.0.2/: CMakeLists.txt  help.txt  main.cpp
Source-code/1.0.0.3/: README.MD  main.cpp
Source-code/debug/: Hook.h  main.cpp
Source-code/stable/: main.cpp
Technical-documentation/: README.MD
Test-Driver-Signature/: DSignTool.7z  README.MD  cs 密码cs123456.pfx  soft密码：AAbb1234.pfx
vAlerainArkQtUi/: CMakeLists.txt  main.cpp  mainwindow.ui
